--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
+<!DOCTYPE html>
 <html>
     <head>
         <title>CSCE 190: Trevor Yarborough</title>
     </head>
     <body>
         <h1>Trevor Yarborough</h1>
+        <p>Here is an edit</p>
     </body>
 </html>
