--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     </head>
     <body>
         <h1>Trevor Yarborough</h1>
-        <p>Here is an edit</p>
+        <div class="about"><h2>About me</h2></div>
+        <div class="skills"><h2>Skills</h2></div>
+        <div class="projects"><h2>Highlighted pprojects</h2></div>
+        <div class="contact"><h2>Contact me</h2></div>
     </body>
 </html>
