--- a/CSCE 190/index.html
+++ b/CSCE 190/index.html
@@ -6,9 +6,33 @@
     </head>
     <body>
         <h1>Trevor Yarborough</h1>
-        <div class="about"><h2>About me</h2></div>
-        <div class="skills"><h2>Skills</h2></div>
-        <div class="projects"><h2>Highlighted pprojects</h2></div>
-        <div class="contact"><h2>Contact me</h2></div>
+
+        <div class="about">
+            <h2>About me</h2>
+        </div>
+
+        <div class="skills">
+            <h2>Skills</h2>
+        </div>
+
+        <div class="projects">
+            <h2>Highlighted pprojects</h2>
+            <!-- Problem Statement Assignment -->
+            <section class="project">
+                <a href="files/problem_statement.pdf">
+                    <h3>Problem Statement</h3>
+                </a>
+                <a href="files/problem_statement.pdf">
+                    <img src="images/real-problem-statement.png">
+                </a>
+                <p>There is not a widespread, interactive way for college students to manage their time, all in one place.</p>
+            </section>
+
+        </div>
+
+        <div class="contact">
+            <h2>Contact me</h2>
+        </div>
+
     </body>
 </html>
