Adding my flow chart and whatnot

--- a/CSCE 190/index.html
+++ b/CSCE 190/index.html
@@ -28,6 +28,17 @@
                 <p>There is not a widespread, interactive way for college students to manage their time, all in one place.</p>
             </section>
 
+            <!--Affinity Diagram Assignment -->
+            <section class="project">
+                <a href="files/Affinity.pdf">
+                    <h3>Affinity Diagram</h3>
+                </a>
+                <a href="files/Affinity.pdf">
+                    <img src="images/Affinity.png">
+                </a>
+                <p>In this diagram, I was able to think through more clearly how to do my project and what steps I may need to take to achieve my goals</p>
+            </section>
+
         </div>
 
         <div class="contact">
